--- a/TinyYOLO/TinyYOLO.csproj
+++ b/TinyYOLO/TinyYOLO.csproj
@@ -106,14 +106,14 @@
     <Compile Include="Models\VideoEffectItem.cs" />
     <Compile Include="Properties\Annotations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TinyYOLO.cs" />
+    <Compile Include="Models\TinyYOLO.cs" />
     <Compile Include="VideoPage.xaml.cs">
       <DependentUpon>VideoPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="ViewModels\VideoPageViewModel.cs" />
     <Compile Include="ViewModels\ViewModelBase.cs" />
-    <Compile Include="YoloBoundingBox.cs" />
-    <Compile Include="YoloWinMlParser.cs" />
+    <Compile Include="Models\YoloBoundingBox.cs" />
+    <Compile Include="Models\YoloWinMlParser.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
