--- a/TinyYOLO/TinyYOLO.csproj
+++ b/TinyYOLO/TinyYOLO.csproj
@@ -97,6 +97,10 @@
     </Compile>
     <Compile Include="Converters\NullToVisibilityConverter.cs" />
     <Compile Include="Converters\ObjectToFloatConverter.cs" />
+    <Compile Include="Helpers\ConcurrentLogger.cs" />
+    <Compile Include="Helpers\FrameGrabber.cs" />
+    <Compile Include="Helpers\NewFrameEventArgs.cs" />
+    <Compile Include="Helpers\NewResultEventArgs.cs" />
     <Compile Include="Helpers\TaskUtilities.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
@@ -107,6 +111,7 @@
     <Compile Include="Properties\Annotations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Models\TinyYOLO.cs" />
+    <Compile Include="TinyYOLO.cs" />
     <Compile Include="VideoPage.xaml.cs">
       <DependentUpon>VideoPage.xaml</DependentUpon>
     </Compile>
